src/test/deca/syntax/invalid/provided/chaine_incomplete-lex.corr
./src/test/deca/syntax/invalid/provided/chaine_incomplete.deca:11:0: token recognition error at: '"chaine pas finie\n'
